[package]
name = "gameboy"
version = "0.1.0"
authors = ["tpyd <112725276+tpyd@users.noreply.github.com>"]
edition = "2021"

[workspace]
members = [
    "crates/*"
]

[dependencies]
# Replace minifb with pixels in the future for better graphics customization.
minifb = "0.24.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
#pixels = "0.12.0"
